Final build before EE.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,56 @@
         <nav class="top-bar fixed" data-topbar>
           <ul class="title-area">
             <li class="name">
-              <h1><a href="#">Something</a></h1>
+              <h1><a href="#">
+    <?xml version="1.0" encoding="utf-8"?>
+<!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+<!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
+<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+     width="86.461px" height="75px" viewBox="0 0 86.461 99.196" enable-background="new 0 0 86.461 99.196" xml:space="preserve">
+<path fill="#FFFFFF" d="M85.515,24.435c-0.093-0.06-9.321-6.099-18.946-12.062C46.645,0.026,44.474,0.009,43.43,0
+    c-1.043-0.008-3.213-0.026-23.334,11.997c-9.719,5.808-19.046,11.696-19.14,11.755L0,24.355v49.803l0.543,0.604
+    c0.093,0.058,9.322,6.1,18.947,12.062c19.925,12.348,22.094,12.364,23.138,12.372c1.043,0.01,3.214,0.027,23.335-11.995
+    c9.72-5.807,19.046-11.698,19.138-11.756l1.359-0.88V25.054L85.515,24.435z M84.188,49.932l-0.191,23.762
+    c0,0-37.139,23.466-41.351,23.433C38.431,97.091,1.678,73.028,1.678,73.028L1.87,49.267l0.192-23.764
+    c0,0,37.138-23.465,41.352-23.431C47.625,2.106,84.38,26.168,84.38,26.168L84.188,49.932z"/>
+<g>
+    <polygon fill="#FFFFFF" points="5.35,27.437 43.343,10.72 43.394,4.618   "/>
+    <polygon fill="#FFFFFF" points="43.394,4.618 43.343,10.72 81.062,28.049     "/>
+</g>
+<g>
+    <polygon fill="#FFFFFF" points="80.709,71.886 42.715,88.604 42.665,94.705   "/>
+    <polygon fill="#FFFFFF" points="42.665,94.705 42.715,88.604 4.996,71.272    "/>
+</g>
+<polygon fill="#FFFFFF" points="25.945,75.18 25.943,75.18 25.945,75.181 "/>
+<polygon fill="#FFFFFF" points="26.017,66.248 26.017,66.246 26.015,66.248 "/>
+<g>
+    <g>
+        <g>
+            <path fill="#FFFFFF" d="M61.293,25.021l0.859-3.987l-45.919,7.512c-0.526,0.085-0.601,0.409-0.166,0.715l6.8,4.797
+                c0.437,0.31,1.226,0.495,1.752,0.413l35.812-5.463l0.205-0.948l0,0L61.293,25.021z"/>
+        </g>
+        <path fill="#FFFFFF" d="M24.143,35.853l0.012,5.982c0,0.533,0.308,0.659,0.679,0.276l5.818-5.95
+            c0.375-0.381,0.684-1.131,0.687-1.665L24.143,35.853z"/>
+    </g>
+    <g>
+        <g>
+            <path fill="#FFFFFF" d="M61.293,45.879l0.859-3.987l-45.919,7.512c-0.526,0.085-0.601,0.409-0.166,0.715l6.8,4.796
+                c0.437,0.31,1.226,0.494,1.752,0.414l35.812-5.464l0.205-0.949l0,0L61.293,45.879z"/>
+        </g>
+        <path fill="#FFFFFF" d="M24.143,56.712l0.012,5.98c0,0.533,0.308,0.66,0.679,0.276l5.818-5.95
+            c0.375-0.381,0.684-1.129,0.687-1.663L24.143,56.712z"/>
+    </g>
+    <g>
+        <g>
+            <path fill="#FFFFFF" d="M61.343,66.53l0.86-3.986l-45.919,7.512c-0.526,0.085-0.602,0.409-0.166,0.715l6.801,4.797
+                c0.437,0.309,1.226,0.496,1.752,0.412l35.812-5.463l0.205-0.948l0,0L61.343,66.53z"/>
+        </g>
+    </g>
+</g>
+</svg>
+
+
+              </a></h1>
             </li>
             <li class="toggle-topbar menu-icon"><a href="#">Menu</a></li>
           </ul>
@@ -48,10 +97,11 @@
           </ul>
           <!-- Left Nav Section -->
           <ul class="left">
-            <li><a href="#">Manager</a></li>
-            <li><a href="#">Products</a></li>
-            <li><a href="#">Testiomnials</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#manager" class="scroll">Manager</a></li>
+            <li><a href="#products" class="scroll">Products</a></li>
+            <li><a href="#testimonials" class="scroll">Testimonials</a></li>
+            <li><a href="#news" class="scroll">News</a></li>
+            <li><a href="#contact" class="scroll">Contact</a></li>
           </ul>
         </section>
       </nav>
@@ -59,19 +109,20 @@
     <!-- End of Navigation -->
     <!-- Image of the location Skyline -->
     <section class="office">
+    <img src="img/office/austin.jpg" alt="">
       <div class="row">
         <div class="small-12 medium-6 large-8 columns">
-          <div class="home-panel animate show-for-medium-up" data-animate="fadeInLeftBig">
+          <div class="home-panel wow fadeInLeftBig">
             <p>Eliot Management Group has been providing merchant services to businesses for over 15 years.  Eliot provides services to thousands of customers, processing billions of dollars in transactions annually.  Eliot believes in a consultative approach and maintains personalized, one on one relationships with all its merchants, providing them with on-demand support and 24/7 customer service.  To provide this level of support, Eliot maintains a network of local offices in cities across the nation.  More than a voice on the phone, Eliot representatives supply personalized assistance and on-going customer service.</p>
           </div>
-        </div>
+            </div>
       </div>
     </section>
     <!-- End of location Skyline -->
     <!-- Office Identification -->
-    <section class="odd">
+    <section id="manager" class="odd">
       <div class="row">
-        <div class="small-12 medium-4 large-4 columns">
+        <div class="small-12 medium-4 large-4 columns text-center">
           <?xml version="1.0" encoding="utf-8"?>
           <!-- Generator: Adobe Illustrator 16.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
           <!DOCTYPE svg PUBLIC "-//W3C//DTD SVG 1.1//EN" "http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd">
@@ -131,7 +182,7 @@
           </ul>
         </div>
         <div class="small-12 medium-8 large-7 large-offset-1 columns">
-          <img class="th" src="http://placehold.it/600x325" alt="">
+          <img class="th" src="img/map.jpg" alt="">
           <hr>
           <ul class="inline-list">
             <li></li>
@@ -153,7 +204,7 @@
     </section>
     <!-- End of Office Identification -->
     <!-- Featured Product -->
-    <section class="even">
+    <section id="products" class="even">
       <div class="row">
         <div class="row">
           <div class="small-12 medium-4 large-4 columns">
@@ -191,24 +242,32 @@
     </section>
     <!-- End of Featured Product -->
     <!-- Video Testimonials -->
-    <section class="odd">
+    <section id="testimonials" class="odd scroll">
       <div class="row">
-        <div class="small-12 medium-6 large-6 columns text-center">
+        <div class="small-12 medium-12 large-12 columns text-center">
           <h3>Video Testiomonials</h3>
           <hr>
           <div class="video-frame">
-            <div><img src="http://placehold.it/470x220" alt=""></div>
-            <div><img src="http://placehold.it/470x220" alt=""></div>
-          </div>
-        </div>
-        <div class="small-12 medium-6 large-6 columns text-center">
-          <h3>Interested?</h3>
-          <hr>
-          <a href="#" class="button small">Visit Our Careers Site</a>
+            <div><img src="http://placehold.it/475x250" alt=""></div>
+            <div><img src="http://placehold.it/475x250" alt=""></div>
+            <div><img src="http://placehold.it/475x250" alt=""></div>
+             </div>
         </div>
       </div>
     </section>
     <!-- End Of Video Testimonials -->
+<!-- Hiring Section -->
+<section class="hiring">
+    <div class="row">
+      <div class="small-12 medium-6 large-12 columns">
+      <div class="overlay text-center">
+                    <h4>Interested in a position</h4>
+          <a href="#" class="button">Visit our Careers Site</a>
+      </div>
+      </div>
+        </div>
+</section>
+<!-- End of hiring section -->
     <section class="even">
       <div class="row">
         <div class="small-12 medium-12 large-12 columns text-center">
@@ -231,10 +290,10 @@
         </div>
       </div>
     </section>
-    <section class="odd"><!-- Modules from Main Site -->
+    <section id="news" class="odd scroll"><!-- Modules from Main Site -->
     <!-- Blog Section -->
     <div class="row">
-      <div class="small-12 medium-6 large-6 columns">
+      <div class="small-12 medium-6 large-6 columns wow fadeInDownBig">
         <h3>Blog</h3>
         <div class="panel blog-roll">
           <ul class="no-bullet">
@@ -265,7 +324,7 @@
       </div>
       <!-- End of Blog Section -->
       <!-- News Section -->
-      <div class="small-12 medium-6 large-6 columns">
+      <div class="small-12 medium-6 large-6 columns wow fadeInUpBig">
         <h3>News</h3>
         <div class="panel news-roll">
           <ul>
@@ -312,7 +371,7 @@
   </section>
   <!-- End of Modules from Main Site -->
   <!-- Contact Section -->
-  <section class="even">
+  <section id="contact" class="even wow bounceInUp scroll">
     <div class="row">
       <div class="small-12 medium-12 large-12 columns">
         <h3>Contact</h3>
@@ -396,7 +455,7 @@
   <footer class="sub-footer">
     <div class="row">
       <div class="small-12 medium-6 large-6 columns">
-        <img src="http://placehold.it/300x150" alt="">
+        <img src="img/eliot-logo-white.svg" alt="">
       </div>
       <div class="small-12 medium-6 large-6 columns">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt maiores earum temporibus laborum perferendis officia et aliquam qui fuga cum.</p>
@@ -408,6 +467,8 @@
   <script src="bower_components/foundation/js/foundation.min.js"></script>
   <script src="bower_components/slick-carousel/slick/slick.min.js"></script>
   <script src="bower_components/jquery-waypoints/waypoints.min.js"></script>
+  <script src="bower_components/jquery.smooth-scroll/jquery.smooth-scroll.min.js"></script>
+  <script src="bower_components/wow/dist/wow.min.js"></script>
   <script src="js/app.js"></script>
 </body>
 </html>
