changes to some structure

--- a/index.html
+++ b/index.html
@@ -467,6 +467,7 @@
   <script src="bower_components/foundation/js/foundation.min.js"></script>
   <script src="bower_components/slick-carousel/slick/slick.min.js"></script>
   <script src="bower_components/jquery-waypoints/waypoints.min.js"></script>
+  <script src="bower_components/isotope/dist/isotope.pkgd.min.js"></script>
   <script src="bower_components/jquery.smooth-scroll/jquery.smooth-scroll.min.js"></script>
   <script src="bower_components/wow/dist/wow.min.js"></script>
   <script src="js/app.js"></script>
