--- a/office.html
+++ b/office.html
@@ -156,8 +156,8 @@
    <figure class="slide">
     <img src="http://placehold.it/475x300" alt="">
     <figcaption>
-      <h2>Office</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adicing elit.</p>
+      <h2>Chicago</h2>
+      <p>650 E. ALGONQUIN ROAD, SUITE 303 847-827-2800</p>
       <p><a class="button small" href="">Visit Site</a></p>
     </figcaption>
   </figure>
